--- a/thesis.tex
+++ b/thesis.tex
@@ -8,7 +8,7 @@
 \documentclass[12pt,PhD,twoside]{muthesis}
 
 %These are the citation styles.
-\usepackage[backend=bibtex,style=nature,citestyle=nature]{biblatex} %science, nature, alphabetic are common choices.
+\usepackage[backend=bibtex,style=nature,citestyle=nature, doi=false,isbn=false,url=false, maxbibnames=99]{biblatex} %science, nature, alphabetic are common choices.
 %FYI
 
 % Citations styles = https://www.sharelatex.com/learn/Biblatex_citation_styles
@@ -20,6 +20,11 @@
 \usepackage{longtable}
 \usepackage{enumerate}% http://ctan.org/pkg/enumerate
 \usepackage[acronym]{glossaries} %Whilst it's tempting, I've found tinkering with glossary structure and style is a nightmare.
+\usepackage{ragged2e} % allows handling long code lines and words over multiple lines.
+
+
+
+
 \addbibresource{references.bib} % This is the file containing all your bibtex references. All reference managers can export to this format.
 \graphicspath{{images/}} %Store all your figures here
 
@@ -46,6 +51,7 @@
 
 
 \begin{document}
+
 
 \title{Investigating the Recognition and Interactions of Non-Polar \(\alpha\) Helices in Biology}
 \author{James Alexander Baker}
@@ -89,7 +95,7 @@
 
 
 
-\prefacesection{Abstract}
+%\prefacesection{Abstract}
 Non\---polar helices figure prominently in structural biology, from the first protein structure (myoglobin) through trans-membrane segments, to current work on recognition of protein trafficking and quality control. Trans-membrane \(\alpha\) helix containing proteins makep around a quarter of all proteins, as well as two-thirds of drug targets, and contain some of the most critical proteins required for life as we know it. Yet they are fundamentally difficult to study experimentally. This is in part due to the very features that make them so biologically influential: their non\---polar trans-membrane helix regions. What is missing in the current literature is a nuanced understanding of the complexities of the helix composition beyond a hydrophobic region of around 20 residues. Currently, it is known that the properties of trans-membrane protein \(\alpha\) helices underpin membrane protein insertion mechanisms.
 
 By leveraging large datasets of trans-membrane proteins, this thesis is focused on characterising features of \(\alpha\) helices en masse, particularly regarding their topology, membrane\---protein interactions, and intramembrane protein interactions.
@@ -98,9 +104,9 @@ In this thesis, I make the argument that there are different classifications of 
 
 \prefacesection{Lay Abstract} %The lay abstract section is optional.
 
-The survival of each of our cells relies on a a cellular barrier to separate themselves from the surrounding environment -- this cellular skin can be thought of as the bag that contains all the important machinery required for normal cell function. The barrier works by being chemically very different to both the outside environment, and to the inside of the cell, which in both cases are mostly water. The membrane is fatty, and repels water.
+The survival of each of our cells relies on a a cellular barrier to separate themselves from the surrounding environment. This cellular skin can be thought of as the bag that contains all the important machinery required for normal cell function. The barrier works by being chemically very different to both the outside environment, and to the inside of the cell, which in both cases are mostly water. The membrane is fatty, and repels water.
 
-Proteins are the molecular machinery that power the cells. Around a third of our genome codes for protein that are permanently embedded in the membrane.
+Proteins are the molecular machinery that power the cells and carry out the functions that keep the . Around a third of our genome codes for protein that are permanently embedded in the membrane.
 
 In this thesis, we focus particularly on the parts of the protein that are embedded in the water repelling cellular skin. Traditionally, these regions are hard to study, because we must first remove them from the cellular wall, which causes problems since the embedded regions also repel water and this often causes them to stick to one another, making them hard to work with in a laboratory setting.
 
@@ -116,11 +122,11 @@ I would like to thank all members of both the Eisenhaber research group, as well
 
 \prefacesection{The Author}
 
-The author has previously completed a Masters in Biochemistry from the University of Liverpool, graduating in 2014.
+In 2013, I undertook an internship at Chulalongkorn University under the supervision of Dr. Thanyada Rungrotmongkol. The internship contributed to simulating several compounds that could target a viral protease (\(3C^{pro}\)) of both Cocksackie 16 and Enterovirus 72, of which infect X and kill Y people per year. The results showed that several compounds were more potent inhibitors at a protein level than the currently championed drug candidates.
 
-In between the penultimate and final year of Masters study, the  author undertook an internship at Chulalongkorn University under the supervision of Dr. Thanyada Rungrotmongkol. The internship contributed to simulating several compounds that could target a viral protease (\(3C^{pro}\)) of both Cocksackie 16 and Enterovirus 72, of which infect X and kill Y people per year. The results showed that several compounds were more potent inhibitors at a protein level than the currently championed drug candidates.
+I have previously completed a Masters in Biochemistry from the University of Liverpool, graduating in 2014.
 
-In the final year of the Masters degree, under the supervision of Dr. Dan Rigden, the author modelled domains of a transmembrane protein involved in bacterial competence (ComEC) in \textit{Bacillus subtilis}. Structural and sequential analysis of the models revealed a cryptic OB fold in a domain of unknown function, and a potential competence nuclease function in the $\beta$ --lactamase--like domain.
+In the final year of the Masters degree, under the supervision of Dr. Dan Rigden, I modelled domains of a transmembrane protein involved in bacterial competence (ComEC) in \textit{Bacillus subtilis}. Structural and sequential analysis of the models revealed a cryptic OB fold in a domain of unknown function, and a potential competence nuclease function in the $\beta$--lactamase--like domain~\cite{Baker2016}.
 
 During the first year of this PhD studentship, the author presented a part of the work in Berlin at the FEBS annual congress (Baker, J. A. and Warwicker, J. A Bioinformatic Method to Identify Potential SNARE Proteins. \textit{ 40th FEBS Congress} Late Breaker (2015))
 
