Removed unnecessary commants from shell script for compiling

--- a/references.bib
+++ b/references.bib
@@ -694,7 +694,7 @@ url = {http://dx.doi.org/10.1529/biophysj.105.073395},
 volume = {90},
 year = {2006}
 }
-@article{Baker2016,
+@article{Kawasaki2014,
 abstract = {We have analyzed the conformations of EF-lobes, adjacent pairs of EF-hand domains, in a coordinate system based on the approximate two fold (z) axis that relates the two EF-hands. Two parameters - dE({\o}), the azimuthal angle between the y-axis and the projection of the offset vector to helix E onto the yz-plane, and $\delta$dF({\o}), the difference angle between the two helices (F1 and F2) of odd and even domains - characterize the openness of a single EF-hand domain and of an EF-lobe, respectively. We describe and compare values of dE({\o}) and of $\delta$dF({\o}) for EF-hand proteins of five subfamilies - CTER, CPV, S100, PARV, CALP - in calci- and apo- forms, with and without bound target proteins. Each subfamily has characteristic changes associated with binding calcium and/or target proteins. {\textcopyright} Proteins 2014;. {\textcopyright} 2014 Wiley Periodicals, Inc.},
 author = {Kawasaki, Hiroshi and Kretsinger, Rh},
 doi = {10.1002/prot.},
@@ -1773,14 +1773,17 @@ year = {2009}
 }
 @article{Baker2016,
 abstract = {Bacterial competence, which can be natural or induced, allows the uptake of exogenous double stranded DNA (dsDNA) into a competent bacterium. This process is known as transformation. A multiprotein assembly binds and processes the dsDNA to import one strand and degrade another yet the underlying molecular mechanisms are relatively poorly understood. Here distant relationships of domains in Competence protein EC (ComEC) of Bacillus subtilis (Uniprot: P39695) were characterised. DNA-protein interactions were investigated in silico by analysing models for structural conservation, surface electrostatics and structure-based DNA binding propensity; and by data-driven macromolecular docking of DNA to models. Our findings suggest that the DUF4131 domain contains a cryptic DNA-binding OB fold domain and that the $\beta$- lactamase-like domain is the hitherto cryptic competence nuclease.},
-author = {Baker, James A. and Simkovic, Felix and Taylor, Helen M C and Rigden, Daniel J.},
+author = {Baker, James A. and Simkovic, Felix and Taylor, Helen M.C. and Rigden, Daniel J.},
 doi = {10.1002/prot.25088},
 isbn = {1858784298},
 issn = {10970134},
 journal = {Proteins: Structure, Function and Bioinformatics},
-keywords = {Bacterial competence,ComEC,Domain structure,Evolutionary covariance,Protein modeling},
+keywords = {ComEC,bacterial competence,domain structure,evolutionary covariance,protein modeling},
+number = {10},
+pages = {1431--1442},
 pmid = {24638959},
 title = {{Potential DNA binding and nuclease functions of ComEC domains characterized in silico}},
+volume = {84},
 year = {2016}
 }
 @article{Markowetz2017,
@@ -5143,10 +5146,19 @@ volume = {40},
 year = {2001}
 }
 @article{Bahadur1971,
-author = {Bahadur, RR},
-title = {{Some limit theorems in statistics}},
-url = {http://epubs.siam.org/doi/pdf/10.1137/1.9781611970630.fm},
-year = {1971}
+archivePrefix = {arXiv},
+arxivId = {arXiv:1011.1669v3},
+author = {Bahadur, R. R.},
+doi = {doi:10.1201/b17510-1},
+eprint = {arXiv:1011.1669v3},
+isbn = {978-1-4822-3242-4},
+issn = {0024094X},
+journal = {Chemistry of Pyrroles},
+pages = {i--xvi},
+pmid = {23138097},
+title = {{Front Matter}},
+url = {http://dx.doi.org/10.1201/b17510-1},
+year = {2014}
 }
 @article{Zhang1993,
 abstract = {A 16-residue peptide [(Ala-Glu-Ala-Glu-Ala-Lys-Ala-Lys)2] has a characteristic beta-sheet circular dichroism spectrum in water. Upon the addition of salt, the peptide spontaneously assembles to form a macroscopic membrane. The membrane does not dissolve in heat or in acidic or alkaline solutions, nor does it dissolve upon addition of guanidine hydrochloride, SDS/urea, or a variety of proteolytic enzymes. Scanning EM reveals a network of interwoven filaments approximately 10-20 nm in diameter. An important component of the stability is probably due to formation of complementary ionic bonds between glutamic and lysine side chains. This phenomenon may be a model for studying the insoluble peptides found in certain neurological disorders. It may also have implications for biomaterials and origin-of-life research.},
