--- a/thesis.tex
+++ b/thesis.tex
@@ -124,11 +124,9 @@ I would like to thank all members of both the Eisenhaber research group, as well
 
 In 2013, I undertook an internship at Chulalongkorn University under the supervision of Dr. Thanyada Rungrotmongkol. The internship contributed to simulating several compounds that could target a viral protease (\(3C^{pro}\)) of both Cocksackie 16 and Enterovirus 72, of which infect X and kill Y people per year. The results showed that several compounds were more potent inhibitors at a protein level than the currently championed drug candidates.
 
-I have previously completed a Masters in Biochemistry from the University of Liverpool, graduating in 2014.
+I have previously completed a Masters in Biochemistry from the University of Liverpool, graduating in 2014. In the final year of the Masters degree, under the supervision of Dr. Dan Rigden, I modelled domains of a transmembrane protein involved in bacterial competence (ComEC) in \textit{Bacillus subtilis}. Structural and sequential analysis of the models revealed a cryptic OB fold in a domain of unknown function, and a potential competence nuclease function in the $\beta$--lactamase--like domain~\cite{Baker2016}.
 
-In the final year of the Masters degree, under the supervision of Dr. Dan Rigden, I modelled domains of a transmembrane protein involved in bacterial competence (ComEC) in \textit{Bacillus subtilis}. Structural and sequential analysis of the models revealed a cryptic OB fold in a domain of unknown function, and a potential competence nuclease function in the $\beta$--lactamase--like domain~\cite{Baker2016}.
-
-During the first year of this PhD studentship, the author presented a part of the work in Berlin at the FEBS annual congress (Baker, J. A. and Warwicker, J. A Bioinformatic Method to Identify Potential SNARE Proteins. \textit{ 40th FEBS Congress} Late Breaker (2015))
+% During the first year of this PhD studentship, the author presented a part of the work in Berlin at the FEBS annual congress (Baker, J. A. and Warwicker, J. A Bioinformatic Method to Identify Potential SNARE Proteins. \textit{ 40th FEBS Congress} Late Breaker (2015))
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\subsection*{Preamble} %A side note. the "*" hides the section number.
